@@ -94,6 +94,7 @@ Changes for v2.03
 - Change of Look and Feel may need RMIR to be closed and re-opened, so added dialog to say so and to allow cancellation (Graham)
 - Fix bug allowing segment type 0x0F to have odd length (Dave Reed)
 - Fix bug that meant upload confirmation message was shown when saving a Simpleset .bin file (Graham)
+- Support decimal point in Favorites channels, needed for ATSC (Graham)
 
 Changes for v2.02
 -- Alpha --
